--- a/src/styles/components/movieComponents/MovieDetails.module.scss
+++ b/src/styles/components/movieComponents/MovieDetails.module.scss
@@ -1,9 +1,7 @@
 @import "../../global/colors.scss";
 
 .container {
-    top: 0;
-    left: 0;
-    width: 100vw;
+     width: 100%;
     z-index: -1;
     background-color: $color-black-modal;
     color: $color-white;
@@ -193,4 +191,41 @@
     background-color: #ea003d;
     border-radius: 2px;
     height: 100%;
+}
+@media screen and (min-width: 880px) and (max-width: 1159px) {
+    .movie {
+        &_container {
+            width: 100%;
+            margin-right: 20px;
+            margin-left: 20px;
+        }
+        &_content {
+            width: 66.66666667%;
+            padding: 0 12px;
+            margin: 0;
+        }
+        &_poster {
+            width: 16.66666667%;
+            margin-left: 16.66666667%;
+        }
+    }
+}
+@media screen and (max-width: 879px){
+    .movie {
+        &_container {
+            width: 100%;
+        }
+        &_content {
+            width: 100%;
+            padding: 0 12px;
+            margin: 0;
+        }
+        &_poster {
+            display:none;
+        }
+    }
+    .content {
+        width: auto;
+        margin-right: 20px;
+         margin-left: 20px;}
 }
